Fixed text alignment.

--- a/ViCoBa-oppdrag/css/main.css
+++ b/ViCoBa-oppdrag/css/main.css
@@ -7,6 +7,11 @@
     border-spacing: 0;
 }*/
 
+.number {
+    text-align: right;
+}
+
 .midheading td {
     border-top: 3px solid black;
+    text-align: left;
 }
